external-crates/move/crates/move-compiler/tests/move_2024/naming/lambda_with_type_args.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03007]: too many type arguments
  ┌─ tests/move_2024/naming/lambda_with_type_args.move:3:9
  │
3 │         $f<u64>(0)
  │         ^^ Invalid lambda call. Expected zero type arguments
