external-crates/move/crates/move-compiler/tests/move_2024/naming/lambda_with_type_args.move
module a::m {
    macro fun do<$T>($f: |$T| -> $T): $T {
        $f<u64>(0)
    }
}
